<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!--Labels-->
    <string name="label_repuplika_pc">Republika PC</string>
    <string name="label_tipid_pc">Tipid PC</string>
    <string name="label_tipid_pc_dot_com">TipidPC.com</string>
    <string name="label_tipid_pc_dot_com_small_caps">tipidpc.com</string>
    <string name="label_rigs">RIGS</string>
    <string name="label_settings">Settings</string>
    <string name="label_add">Add</string>
    
    <string name="hint_budget_build">Budget build</string>
    <string name="highlighted_parts">Highlighted parts</string>
    <string name="featured_parts">Featured parts</string>
    <string name="current_rig">Current rig</string>
    <string name="photos">Photos</string>
    <string name="create_a_rig">Create a Rig</string>
    <string name="create_a_part">Create a Part</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_follow">Sign in to follow seller</string>
    <string name="retry">Retry</string>
    <string name="term_and_condition_sign_in_agreement">By clicking "Sign Up With Google", you agree to our terms and that you have read our Privacy Policy</string>
    
    <string name="rig_created_success">New Rig has been created</string>
    <string name="rig_deleted">Rig deleted</string>
    <string name="added_to_rig_success">Added Item to Rig</string>
    <string name="item_saved">Item Saved!</string>
    <string name="item_deleted">Item Deleted!</string>
    
    <string name="updating">Updating...</string>
    <string name="delete">Delete</string>
    <string name="created_at_">Created at:</string>
    <string name="working_in_progress">Feature coming soon</string>
    <string name="reached_max_rig_limit">Sorry but you have reached the max rig limit (max is 2)</string>
    <string name="edit_rig_name">Edit rig name (Click name to edit)</string>
    <string name="save_new_name">Save new name (Not yet available.)</string>
    <string name="want_to_delete_this_rig">Do you want to delete this rig?</string>
    <string name="dlit">dlit</string>
    <string name="sign_in_to_unlock_feature">Please sign in to enjoy this feature</string>
    <string name="signing_up">Signing up</string>
    <string name="creating_user_please_wait">Loading user data... please wait...</string>
    
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="i_would_like_to_give_credits_to">I would like to give credits to...</string>
    <string name="freepick_flaticon_com_for_my_main_app_icon_and_some_of_the_icons_used_in_the_app">Freepik (flaticon.com) for my main app icon and some of the icons used in the app</string>
    <string name="link_www_flaticon_com_authors_freepik">link: www.flaticon.com/authors/freepik</string>
    <string name="materialdesignicons_com_community_for_some_of_the_icons_used_in_the_app">Materialdesignicons.com community for some of the icons used in the app</string>
    <string name="and_special_thanks_to">and special thanks to...</string>
    <string name="sir_jesus_a_domingo_tipidpc_com">Sir Jesus A. Domingo / TipidPC.com</string>
    <string name="thank_you_sir_for_letting_me_use_tpc_data_to_my_app_salamat_po_sir">Thank you sir for letting me use tpc data to my app. Salamat po sir.</string>
    <string name="link">link</string>
    <string name="tpc_link">TPC Link</string>
    <string name="item_details">Item Details:</string>
    <string name="tpc_seller">Tipid PC Seller/User:</string>
    <string name="add_to_rig">Add To Rig:</string>
    <string name="save">Save</string>
    <string name="no_internet_connection_error">Your connection is not available. Check your data or wifi connection.</string>
    <string name="no_items_found">No items found.</string>
    <string name="no_items_found_seller">No items found for this seller.</string>
    <string name="no_sellers_found">No sellers found.</string>
    <string name="loading">loading...</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="you_are_currently_signed_out_sign_in_to_follow_seller">You are currently signed out, Sign In to Follow seller</string>
    <string name="loading_many_data_may_take_some_time">Loading many data may take some time...</string>
    <string name="back_to_top">Back to top</string>
    <string name="you_have_not_save_any_items_yet">You have no saved items.</string>
    <string name="you_have_not_parts_for_this_rig_yet">You have no parts for this rig items.</string>
    <string name="search_items">Search items</string>
    <string name="check_for_sale_items">Check for sale items</string>
    <string name="refresh">Refresh</string>
    <string name="sync">Sync</string>
    <string name="unfollow_failed">Unfollow failed…</string>
    <string name="delete_failed">Delete failed…</string>
</resources>
