<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshSaved"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    
            <LinearLayout
                android:id="@+id/linearLayoutSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/view_padding_2"
                android:orientation="vertical"
                tools:visibility="gone">
        
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_in_to_unlock_feature"
                    android:textSize="@dimen/font_size_paragraph_text"
                    android:textColor="@color/colorGray"
                    style="@style/TextAppearance.TileSecondary"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/view_padding_2"
                    android:layout_marginBottom="@dimen/view_padding_2"/>
        
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/buttonSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGray"
                    android:textSize="15sp"
                    android:layout_marginTop="@dimen/view_padding_2"
                    android:layout_marginBottom="@dimen/view_padding_5"
                    app:backgroundTint="@android:color/transparent"
                    app:cornerRadius="8dp"
                    app:rippleColor="#33AAAAAA"
                    app:strokeColor="@color/colorGray"
                    app:strokeWidth="1dp" />
    
            </LinearLayout>
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/savedList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSmoke"
                android:scrollbars="vertical"
                android:paddingTop="@dimen/view_half_padding"
                android:paddingBottom="@dimen/view_half_padding"
                android:fadeScrollbars="true"
                android:visibility="gone"
                android:clipToPadding="false"/>
            
            <LinearLayout
                android:id="@+id/linearLayoutPlaceHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/view_padding_2"
                android:visibility="gone"
                android:orientation="vertical"
                tools:visibility="visible">
                
                <TextView
                    android:id="@+id/error_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/you_have_not_save_any_items_yet"
                    android:textSize="@dimen/font_size_paragraph_text"
                    android:textColor="@color/colorGray"
                    style="@style/TextAppearance.TileSecondary"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/view_padding_2"
                    android:layout_marginBottom="@dimen/view_padding_2"/>
    
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/buttonSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_items"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGray"
                    android:textSize="15sp"
                    android:layout_marginTop="@dimen/view_padding_2"
                    app:backgroundTint="@android:color/transparent"
                    app:cornerRadius="8dp"
                    app:rippleColor="#33AAAAAA"
                    app:strokeColor="@color/colorGray"
                    app:strokeWidth="1dp" />
    
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/buttonGoToFeeds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_for_sale_items"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGray"
                    android:textSize="15sp"
                    app:backgroundTint="@android:color/transparent"
                    android:layout_marginBottom="@dimen/view_padding_5"
                    app:cornerRadius="8dp"
                    app:rippleColor="#33AAAAAA"
                    app:strokeColor="@color/colorGray"
                    app:strokeWidth="1dp" />
                
            </LinearLayout>
        
        </androidx.constraintlayout.widget.ConstraintLayout>
    
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
