<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayoutRoot"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootBottomSheetCreator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bottom_sheet_dialog_rounded_top"
        android:padding="@dimen/view_padding_2">
        
        <TextView
            android:id="@+id/textViewItemLabel"
            style="@style/TextAppearance.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tpc_seller"
            android:textColor="@color/colorGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/textViewSellerName"
            style="@style/TextAppearance.FeedItemDetailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_padding_2"
            android:textColor="@color/colorTipidPcOrange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewItemLabel"
            tools:text="EasyPC Fairview" />
        
    
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutItem"
            style="@style/RigStat"
            android:padding="@dimen/view_padding_10"
            android:layout_marginTop="@dimen/view_padding_3"
            android:background="@drawable/shape_rectangle_rounded_bordered_2dp"
            app:layout_constraintTop_toBottomOf="@id/textViewSellerName"
            app:layout_constraintStart_toStartOf="parent">
        
            <ImageView
                android:id="@+id/imageViewSaveIcon"
                android:src="@drawable/ic_ruby"
                android:layout_width="@dimen/icon_size_18"
                android:layout_height="@dimen/icon_size_18"
                android:layout_marginBottom="@dimen/view_half_padding"/>
        
            <TextView
                android:id="@+id/imageViewSaveText"
                style="@style/TextAppearance.TileTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="item"
                android:textColor="@color/colorRigStatsText"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    
        <LinearLayout
            android:id="@+id/linearLayoutLink"
            style="@style/RigStat"
            android:padding="@dimen/view_padding_10"
            android:layout_marginTop="@dimen/view_padding_3"
            android:layout_marginStart="@dimen/view_padding"
            android:background="@drawable/shape_rectangle_rounded_bordered_2dp"
            app:layout_constraintTop_toBottomOf="@id/textViewSellerName"
            app:layout_constraintStart_toEndOf="@id/linearLayoutItem">
        
            <ImageView
                android:src="@drawable/ic_cube_send"
                android:layout_width="@dimen/icon_size_18"
                android:layout_height="@dimen/icon_size_18"
                android:layout_marginBottom="@dimen/view_half_padding"/>
        
            <TextView
                style="@style/TextAppearance.TileTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:textAlignment="center"
                android:textColor="@color/colorRigStatsText"/>
        </LinearLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFollow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/view_padding_3"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutItem"/>
    
        <TextView
            android:id="@+id/textViewSignedOutNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkGray"
            android:text="@string/you_are_currently_signed_out_sign_in_to_follow_seller"
            android:textSize="@dimen/font_size_small"
            style="@style/TextAppearance.TileTertiary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonFollow"/>
    
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
